<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        tools:context=".ui.neighbour_list.DetailsNeighbourActivity">

        <ImageView
            android:id="@+id/img_details_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="20dp"/>

        <ImageView
            android:id="@+id/img_details_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/imgavatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:tint="#FFEB00"
            app:backgroundTint="#F1F1F1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_details_name"
            app:srcCompat="@drawable/ic_star_border_white_24dp" />

        <TextView
            android:id="@+id/tv_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:text="Caroline"
            android:textColor="@color/White"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_details_avatar"
            tools:ignore="MissingConstraints" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/img_details_avatar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_details_name_card01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="10dp"
                    android:text="Caroline"
                    android:textColor="@color/black"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/tv_details_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="20dp"
                    android:text="Saint-Pierre-du-Mont ; 5km"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_number_card01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="20dp"
                    android:text="+33 6 86 57 90 14"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_details_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="20dp"
                    android:text="www.facebook.fr/Caroline"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="5dp"
                    android:text="A propos de moi"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_details_aboutme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>